# Sakuntala150Puzzles

./: .gitignore  .pre-commit-config.yaml  200Teasers.txt  README.md  puzzles.json  puzzles.tex  puzzles_cli.py  pyproject.toml  requirements.txt  sl_Shakuntala150.py
.github/workflows/: ci.yml
tests/: test_data_integrity.py  test_puzzles_cli.py  test_sl_shakuntala.py
