[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sakuntala150-puzzles"
version = "1.0.0"
description = "Solve Shakuntala Devi's 150 mathematical puzzles using AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "litellm>=1.52",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
streamlit = [
    "streamlit>=1.28",
    "gtts>=2.5",
    "python-vlc>=3.0",
]

[tool.setuptools]
py-modules = ["puzzles_cli", "sl_Shakuntala150"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
